Some adjustments of routes to the API on Swigger ✌🏻✌🏻
